# Ciencia-de-Datos

./: README.md
Material/Unidad 1 - Aspectos básicos de la Ciencia de Datos/: readme.md
Material/Unidad 2 - Gestión de proyectos de ciencia de datos/: README.md
Material/Unidad 6 - Inteligencia Artificial Generativa/: [OPCIONAL] Roadmap para entender los LLMs.md
Resúmenes/Resúmenes - UV/Konieczny/: Flow Interruption Detector - n1krov.md
Resúmenes/Resúmenes - UV/Reis/: res - cap3 reis.md
Resúmenes/Resúmenes - UVI/Michael Albada/: res - cap2 albada.md
admin/: equipos_alumnos_cd2025.ipynb  retro_clase_cd2025.ipynb
datasets/alumnos/SomoSiete/: MonthlyInflationRateUK.csv  README.md
material/Unidad 4 - Ciencia de Datos aplicada/: accesos_material_curso_MIT.ipynb
material/Unidad 4 - Ciencia de Datos aplicada/.ipynb_checkpoints/: accesos_material_curso_MIT-checkpoint.ipynb
notebooks/: laboratorio_feature_engineering.ipynb
proyectos/lab1/: README.md
proyectos/lab1/De Datos Somos/: README.md  demo_de_datos_somos.ipynb  ejercicios_de_datos_somos.ipynb  resultados_presidenciales_2019.csv  resultados_presidenciales_2023.csv
proyectos/lab1/Faith No More/: README.md  demo_faith_no_more.ipynb  requirements.txt  (+2 more)
proyectos/lab2/Lambda/: README.md  presentation.ipynb  pyproject.toml  requirements.txt
resúmenes/Pensamientos y reflexiones/: Arquitectura empresarial.md  CRISP-DM.md  Evolución de la ingeniería de datos.md  Marco completo de la ingeniería de datos.md  Microservicios, capas y pipelines.md  Sobre la arquitectura Medallion.md  Sobre los Lakehouse.md
(+44 files in other folders)
