[project]
name = "lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas==0.14.4",
    "ipykernel>=6.30.1",
    "matplotlib==3.10.6",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "seaborn>=0.13.2",
    "shapely==2.1.1",
]
